# RM2024-SerialDriver-ROS

./: README.md
serial_driver_ch343/: CMakeLists.txt  package.xml
serial_driver_ch343/include/serial_driver_ch343/: RMserialDriver.hpp  protocol.hpp  serialDriver.hpp
serial_driver_ch343/src/: RMserialDriver.cpp  crc.cpp  serialDriver.cpp
